fix 100% scores overlapping label in scores datagrid

--- a/internal/src/components/data-grid-student-score-cell.scss
+++ b/internal/src/components/data-grid-student-score-cell.scss
@@ -3,7 +3,7 @@
 .data-grid-student-score-cell {
 	.data-grid-student-score-cell--score {
 		float: left;
-		width: 2.2em;
+		width: 2.8em;
 	}
 
 	.data-grid-student-score-cell--imported-text {
